fixed the buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     function addbutton(){
         random  = Math.floor(Math.random() * 700);
         let parent = document.getElementById("website");
-            var randomnum = document.createElement("p")
+            var randomnum = document.createElement("button")
             randomnum.innerHTML = random
-            randomnum.style.width = "20px"
+            randomnum.style.height = "20px"
             randomnum.style.borderRadius = "10px"
             randomnum.style.backgroundColor = "lightblue"
             randomnum.style.margin = "10px"
