flavor text works and it's randomized

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head><body class="website" id="website">
     <p class="title"></p>
-    <button style="border: 4px; border-color: blueviolet; background-color: antiquewhite;" onclick=addbutton()> button </button>
-
-    <div class="flavortext"> hiiii </div>
+    <button style="border-width: 10px; border-color: blueviolet; background-color: antiquewhite;" onclick=addbutton()> button </button>
 
 </body>
 
@@ -24,7 +22,6 @@
             //randomnum.onclick = clickablebutton()
         //console.log("adding buttons randomly")
 
-    const flavortext =  document.getElementById("flavortext")
     fetch("https://api.airtable.com/v0/appAHDtZ71geDm3ny/tbl3f9zWzLBb4CvaG", 
     {headers:
         {Authorization: "Bearer patAnH3HHgita5CKB.c17a14a652afca2251342d9cd838b29b6882678aaca9df2527012134203698c8"}
